tests/fail/BitwiseExclusiveOr.java

package fail;
import java.lang.System ;

//This program has errors and shouldn't compile.

public class BitwiseExclusiveOr {
	
	public static void main (String[] args) {
			System.out.println ('Q' ^ 42); //Error, since j-- supports only type int BitwiseExclusiveOr operation
	}
}